--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ development:
   database: store_development
   pool: 5
   username: postgres
-  password: 2Landino2
+  password:
   host: localhost
   port: 5433
 
@@ -25,7 +25,7 @@ test:
   database: store_test
   pool: 5
   username: postgres
-  password: 2Landino2
+  password:
   host: localhost
   port: 5433
 
